Add link to compass repo

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="oswfont">oscillatingprojects</h2>
                     <hr class="small">
-                    <p class="lead">We are not working on any project yet. You can check our <strong>Compass</strong> to find out how our discovering looks like.</p>
-                    <a href="#" class="btn btn-lg btn-dark"><i class="fa fa-compass fa-fw"></i>Compass</a>
+                    <p class="lead">We are not working on any project yet. You can check out our <strong>Compass</strong> to find out how our discovering looks like.</p>
+                    <a href="https://github.com/oscillatingworks/compass" target="_blank"class="btn btn-lg btn-dark"><i class="fa fa-compass fa-fw"></i>Compass</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
