Change Discovering test
We go behind small projects, rather than "the hottest" ones.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <h4>
                                     <strong>Discovering</strong>
                                 </h4>
-                                <p>We keep track of the hottest indie open source projects and report about them.</p>
+                                <p>We keep track of small and attractive indie open source projects and report about them.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
