--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             <a href="https://github.com/oscillatingworks" target="_blank"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/oscillatingw" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
