Update email contact

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </h4>
                     <p>We are an independent,<br>non-commercial organization<br>based in <strong>Berlin</strong>, Germany</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@fer.ac">info@oscillating.works</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
                     </ul>
                     <br>
