Convert phrase to lowercase

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="oswfont">We <i class="fa fa-heart fa-fw"></i> Open Source! </h2>
+                    <h2 class="oswfont">we <i class="fa fa-heart fa-fw"></i> open source! </h2>
                     <p class="lead">Maintaining open source is hard, it takes time and effort, we know it and we want to help you with that. We support indie open source software projects, contributing with our ideas and expertise.</p>
                 </div>
             </div>
