Change and extend About description

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="oswfont">we <i class="fa fa-heart fa-fw"></i> open source! </h2>
-                    <p class="lead">Maintaining open source is hard, it takes time and effort, we know it and we want to help you with that. We support indie open source software projects, contributing with our ideas and expertise.</p>
+                    <p class="lead">Maintaining open source is hard, it takes time and effort,
+                    we know it and want to help developers with this mission. We work on indie
+                    open source software projects, contributing with our ideas and expertise,
+                    making them more usable, appealing and easier to maintain.</p>
                 </div>
             </div>
             <!-- /.row -->
