--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                                 <h4>
                                     <strong>Discovering</strong>
                                 </h4>
-                                <p>We keep track of small and attractive indie open source projects and report about them.</p>
+                                <p>We keep track of small and attractive indie open source
+                                projects and report about them.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -124,7 +125,8 @@
                                 <h4>
                                     <strong>Engineering</strong>
                                 </h4>
-                                <p>We get involved in the project development and understand the technical challenges.</p>
+                                <p>We get involved in the project development and understand
+                                the technical challenges.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -136,7 +138,8 @@
                                 <h4>
                                     <strong>Documentation</strong>
                                 </h4>
-                                <p>We improve the project documentation and adopt open source best practices.</p>
+                                <p>We improve the project documentation and adopt open source
+                                best practices.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -148,7 +151,8 @@
                                 <h4>
                                     <strong>Branding</strong>
                                 </h4>
-                                <p>We create a brand around an idea, so it gets more appealing for users and developers.</p>
+                                <p>We create a brand around an idea, so it gets more appealing
+                                for users and developers.</p>
                             </div>
                         </div>
                     </div>
@@ -168,7 +172,9 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="oswfont">oscillatingprojects</h2>
                     <hr class="small">
-                    <p class="lead">We are not working on any project yet. You can check out our <strong>Compass</strong> to find out how our discovering looks like.</p>
+                    <p class="lead">We are not working on any project yet. You can check
+                    out our <strong>Compass</strong> to find out how our discovering
+                    looks like.</p>
                     <a href="https://github.com/oscillatingworks/compass" target="_blank"class="btn btn-lg btn-dark"><i class="fa fa-compass fa-fw"></i>Compass</a>
                 </div>
                 <!-- /.col-lg-10 -->
@@ -194,7 +200,8 @@
                                 <h4>
                                     <strong>Fernando Álvarez</strong><a href="https://github.com/fern4lvarez" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/fern4lvarez" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
                                 </h4>
-                                <p>Fan of merging pull requests, a clean commit history and Go. His dog is his favourite workmate at <strong>cloudControl</strong>.</p>
+                                <p>Fan of merging pull requests, a clean commit history and Go.
+                                His dog is his favourite workmate at <strong>cloudControl</strong>.</p>
                             </div>
                         </div>
                         <div class="col-xs-6">
@@ -205,7 +212,8 @@
                                 <h4>
                                     <strong>Mateusz Korszun</strong><a href="https://github.com/mkorszun" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/mkorszun" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
                                 </h4>
-                                <p>Nature and technology enthusiast. Software engineer at <strong>cloudControl</strong> during the day, hacker at night.</p>
+                                <p>Nature and technology enthusiast. Software engineer at <strong>cloudControl</strong>
+                                during the day, hacker at night.</p>
                             </div>
                         </div>
                     </div>
@@ -223,7 +231,8 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4 class="oswfont"><strong>oscillatingworks</strong>
                     </h4>
-                    <p>We are an independent,<br>non-commercial organization<br>based in <strong>Berlin</strong>, Germany</p>
+                    <p>We are an independent,<br>non-commercial organization<br>based in
+                    <strong>Berlin</strong>, Germany</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
