Add better wording

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <strong>Discovering</strong>
                                 </h4>
                                 <p>We keep track of small and attractive indie open source
-                                projects and report about them.</p>
+                                projects and report them.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -173,8 +173,8 @@
                     <h2 class="oswfont">oscillatingprojects</h2>
                     <hr class="small">
                     <p class="lead">We are not working on any project yet. You can check
-                    out our <strong>Compass</strong> to find out how our discovering
-                    looks like.</p>
+                    out our <strong>Compass</strong> and find out how our discovering
+                    is going.</p>
                     <a href="https://github.com/oscillatingworks/compass" target="_blank"class="btn btn-lg btn-dark"><i class="fa fa-compass fa-fw"></i>Compass</a>
                 </div>
                 <!-- /.col-lg-10 -->
