Add Robert Mischuda to the team
Also, remove bios.

--- a/index.html
+++ b/index.html
@@ -192,30 +192,45 @@
                     <h2 class="oswfont">oscillatingpeople</h2>
                     <hr class="small dark">
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <img src="img/fa.jpg" class="img-responsive img-circle" alt="">
                             </span>
                                 <h4>
-                                    <strong>Fernando Álvarez</strong><a href="https://github.com/fern4lvarez" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/fern4lvarez" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+                                    Fernando Álvarez
+                                    <br>
+                                    <a href="https://github.com/fern4lvarez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    <a href="https://twitter.com/fern4lvarez" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
                                 </h4>
-                                <p>Fan of merging pull requests, a clean commit history and Go.
-                                His dog is his favourite workmate at <strong>cloudControl</strong>.</p>
                             </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <img src="img/mk.jpg" class="img-responsive img-circle" alt="">
                             </span>
                                 <h4>
-                                    <strong>Mateusz Korszun</strong><a href="https://github.com/mkorszun" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/mkorszun" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+                                    Mateusz Korszun
+                                    <br>
+                                    <a href="https://github.com/mkorszun" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    <a href="https://twitter.com/mkorszun" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
                                 </h4>
-                                <p>Nature and technology enthusiast. Software engineer at <strong>cloudControl</strong>
-                                during the day, hacker at night.</p>
                             </div>
                         </div>
+                        <div class="col-sm-4">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <img src="img/rm.jpg" class="img-responsive img-circle" alt="">
+                            </span>
+                                <h4>
+                                    Robert Mischuda
+                                    <br>
+                                    <a href="http://artavenue.de" target="_blank"><i class="fa fa-tumblr fa-fw"></i></a>
+                                    <a href="https://dribbble.com/artavenue" target="_blank"><i class="fa fa-dribbble fa-fw"></i></a>
+                                </h4>
+                            </div>
+                        </div
                     </div>
                     <!-- /.row (nested) -->
                 </div>
