Fix html metadata
Add @Liz0 to authors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="independant, non-commercial organization working on independent and interesting open source software projects" >
-    <meta name="keywords" content="open source, organization, github, development, software, oscillating works, oscillating, oscillation">
-    <meta name="author" content="Fernando Alvarez, Mateusz Korszun">
+    <meta name="description" content="independent, non-commercial organization working on
+    independent and interesting open source software projects" >
+    <meta name="keywords" content="open source, organization, github, development, software,
+    oscillating works, oscillating, oscillation">
+    <meta name="author" content="Fernando Alvarez, Mateusz Korszun, Elizabeth Osterloh">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
