Add link to Github account in projects section

--- a/index.html
+++ b/index.html
@@ -176,8 +176,11 @@
                     <hr class="small">
                     <p class="lead">We are not working on any projects yet. You can check
                     out our <strong>Compass</strong> and find out how our discovering
-                    is going.</p>
-                    <a href="https://github.com/oscillatingworks/compass" target="_blank"class="btn btn-lg btn-dark"><i class="fa fa-compass fa-fw"></i>Compass</a>
+                    is going, or visit our <a href="https://github.com/oscillatingworks" target="_blank" class="clean">
+                    <strong>GitHub</strong> <span class="fa fa-github"></span></a> account.</p>
+                    <a href="https://github.com/oscillatingworks/compass" target="_blank" class="btn btn-lg btn-dark">
+                    <i class="fa fa-compass fa-fw"></i>Compass
+                    </a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
