Add Blog section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <a href="#portfolio">Projects</a>
             </li>
             <li>
+                <a href="#blog">Blog</a>
+            </li>
+            <li>
                 <a href="#team">Team</a>
             </li>
             <li>
@@ -189,6 +192,27 @@
         <!-- /.container -->
     </section>
 
+    <!-- Blog -->
+    <section id="blog" class="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2 class="oswfont">oscillatingblog</h2>
+                    <hr class="small dark">
+                    <p class="lead">We have a <a href="https://github.com/oscillatingworks" target="_blank" class="clean"><strong>Blog</strong></a>!
+                    We write announcements, updates and many other interesting
+                    stuff, so go read us now!</p>
+                    <a href="http://blog.oscillating.works" target="_blank" class="btn btn-lg btn-dark">
+                    <i class="fa fa-pencil fa-fw"></i>Blog
+                    </a>
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
     <!-- Team -->
     <section id="team" class="team bg-success">
         <div class="container">
@@ -245,10 +269,13 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://github.com/oscillatingworks" target="_blank"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/oscillatingworks" target="_blank"><i class="fa fa-github fa-fw fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/oscillatingw" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/oscillatingw" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a href="http://blog.oscillating.works" target="_blank"><i class="fa fa-pencil fa-fw fa-2x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
