--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>oscillatingworks</title>
+    <title>≅oscillatingworks</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" class="oswfont">oscillatingworks</a>
+                <a href="#top" class="oswfont">≅oscillatingworks</a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -75,7 +75,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1 class="oswfont">oscillatingworks</h1>
+            <h1 class="oswfont">≅oscillatingworks</h1>
             <h3>open source is hard</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Tell me more</a>
@@ -258,7 +258,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4 class="oswfont"><strong>oscillatingworks</strong>
+                    <h4 class="oswfont"><strong>≅oscillatingworks</strong>
                     </h4>
                     <p>We are an independent,<br>non-commercial organization<br>based in
                     <strong>Berlin</strong>, Germany</p>
@@ -279,7 +279,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; oscillatingworks 2015</p>
+                    <p class="text-muted">Copyright &copy; ≅oscillatingworks 2015</p>
                 </div>
             </div>
         </div>
