Update date, place and logo size

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1 class="oswfont">≅oscillatingworks</h1>
+            <h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
             <h3>open source is hard</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Tell me more</a>
@@ -257,7 +257,7 @@
                     <h4 class="oswfont"><strong>≅oscillatingworks</strong>
                     </h4>
                     <p>We are an independent,<br>non-commercial organization<br>based in
-                    <strong>Berlin</strong>, Germany</p>
+                    <strong>Berlin</strong> and <strong>Madrid</strong></p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
@@ -275,7 +275,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; ≅oscillatingworks 2015</p>
+                    <p class="text-muted">Copyright &copy; ≅oscillatingworks 2016</p>
                 </div>
             </div>
         </div>
