--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><strong>≅</strong></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -58,7 +58,7 @@
                 <a href="#services">Mission</a>
             </li>
             <li>
-                <a href="#portfolio">Projects</a>
+                <a href="#labs">Labs</a>
             </li>
             <li>
                 <a href="#blog">Blog</a>
@@ -79,6 +79,7 @@
             <h3>open source is hard</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Tell me more</a>
+            <a href="#labs" class="btn btn-success btn-lg">New!</a>
         </div>
     </header>
 
@@ -170,20 +171,24 @@
         <!-- /.container -->
     </section>
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
+    <!-- Labs -->
+    <section id="labs" class="labs">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2 class="oswfont">oscillatingprojects</h2>
+                    <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
-                    <p class="lead">We are not working on any projects yet. You can check
-                    out our <strong>Compass</strong> and find out how our discovering
-                    is going, or visit our <a href="https://github.com/oscillatingworks" target="_blank" class="clean">
+		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img src="img/piladb.png" alt=""></a>
+		    <p class="lead">All of our research and development are now focused on
+		        <a href="http://piladb.oscillating.works" target="_blank" class="clean"><strong>piladb</strong></a>,
+		    a database engine based on the stack data structure.</p>
+		    <p class="lead">You can also check our
+		        <a href="https://github.com/oscillatingworks/compass" target="_blank" class="clean">
+		    <strong>Compass</strong><i class="fa fa-compass fa-fw"></i>
+		    </a>
+		    to find out what we have researched in the past,
+		    or visit our <a href="https://github.com/oscillatingworks" target="_blank" class="clean">
                     <strong>GitHub</strong> <span class="fa fa-github"></span></a> account.</p>
-                    <a href="https://github.com/oscillatingworks/compass" target="_blank" class="btn btn-lg btn-dark">
-                    <i class="fa fa-compass fa-fw"></i>Compass
-                    </a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -197,11 +202,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2 class="oswfont">oscillatingblog</h2>
+                    <h2 class="oswfont">oscillatingwords</h2>
                     <hr class="small dark">
-                    <p class="lead">We have a <a href="https://github.com/oscillatingworks" target="_blank" class="clean"><strong>Blog</strong></a>!
-                    We write announcements, updates and many other interesting
-                    stuff, so go read us now!</p>
+		    <p class="lead">
+		        We have a <strong>Blog</strong>.
+                        We write announcements, updates and other stuff.
+		    </p>
                     <a href="http://blog.oscillating.works" target="_blank" class="btn btn-lg btn-dark">
                     <i class="fa fa-pencil fa-fw"></i>Blog
                     </a>
@@ -224,8 +230,8 @@
                         <div class="col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <img src="img/fa.jpg" class="img-responsive img-circle" alt="">
-                            </span>
+                                    <img src="img/fa.jpg" class="img-responsive img-circle" alt="">
+                                </span>
                                 <h4>
                                     <strong>Fernando Álvarez</strong><a href="https://github.com/fern4lvarez" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/fern4lvarez" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
                                 </h4>
