--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
-		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img src="img/piladb.png" alt=""></a>
+		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
 		    <p class="lead">All of our research and development are now focused on
 		        <a href="http://piladb.oscillating.works" target="_blank" class="clean"><strong>piladb</strong></a>,
 		    a database engine based on the stack data structure.</p>
