Replace New! button with piladb

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3>open source is hard</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Tell me more</a>
-            <a href="#labs" class="btn btn-success btn-lg">New!</a>
+            <a href="#labs" class="btn btn-success btn-lg">piladb</a>
         </div>
     </header>
 
@@ -194,7 +194,7 @@
                     <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
 		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
-		    <p class="lead">All of our research and development are now focused on
+		    <p class="lead">We're currently designing and developing
 		        <a href="http://piladb.oscillating.works" target="_blank" class="clean"><strong>piladb</strong></a>,
 		    a database engine based on the stack data structure.</p>
 		    <p class="lead">You can also check our
