Add piladb to metadata

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="independent, non-commercial organization working on
-    independent and interesting open source software projects" >
+    independent and interesting open source software projects. developing piladb." >
     <meta name="keywords" content="open source, organization, github, development, software,
-    oscillating works, oscillating, oscillation">
+    oscillating works, oscillating, oscillation, piladb">
     <meta name="author" content="Fernando Alvarez, Mateusz Korszun, Elizabeth Osterloh">
 
     <!-- Favicon -->
