--- a/index.html
+++ b/index.html
@@ -67,19 +67,7 @@
                 <a href="#top">Home</a>
             </li>
             <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#services">Mission</a>
-            </li>
-            <li>
-                <a href="#labs">Labs</a>
-            </li>
-            <li>
-                <a href="#blog">Blog</a>
-            </li>
-            <li>
-                <a href="#team">Team</a>
+                <a href="#labs">piladb</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -91,100 +79,10 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
-            <h3>open source is hard</h3>
+            <h3>like lo-fi indie music — but for open source software</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Tell me more</a>
-            <a href="#labs" class="btn btn-success btn-lg">piladb</a>
         </div>
     </header>
-
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="oswfont">we <i class="fa fa-heart fa-fw"></i> open source! </h2>
-                    <p class="lead">Maintaining open source is hard – it takes time and effort.
-                    We know it and want to help developers with this mission. We work on indie
-                    open source software projects, contributing with our ideas and expertise,
-                    making them more usable, appealing and easier to maintain.</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2 class="oswfont">oscillatingtasks</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Discovering</strong>
-                                </h4>
-                                <p>We keep track of small and attractive indie open source
-                                projects and report on them.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-gear fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Engineering</strong>
-                                </h4>
-                                <p>We get involved in project development and understand
-                                the technical challenges.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-pencil fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Documentation</strong>
-                                </h4>
-                                <p>We improve the project documentation and adopt open source
-                                best practices.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-leaf fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Branding</strong>
-                                </h4>
-                                <p>We create a brand around an idea to make it more appealing
-                                to users and developers.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
     <!-- Labs -->
     <section id="labs" class="labs">
@@ -194,78 +92,27 @@
                     <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
 		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
-		    <p class="lead">We're currently designing and developing
-		        <a href="http://piladb.oscillating.works" target="_blank" class="clean"><strong>piladb</strong></a>,
-		    a database engine based on the stack data structure.</p>
-		    <p class="lead">You can also check our
-		        <a href="https://github.com/oscillatingworks/compass" target="_blank" class="clean">
-		    <strong>Compass</strong><i class="fa fa-compass fa-fw"></i>
-		    </a>
-		    to find out what we have researched in the past,
-		    or visit our <a href="https://github.com/oscillatingworks" target="_blank" class="clean">
-                    <strong>GitHub</strong> <span class="fa fa-github"></span></a> account.</p>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Blog -->
-    <section id="blog" class="blog">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2 class="oswfont">oscillatingwords</h2>
-                    <hr class="small dark">
-		    <p class="lead">
-		        We have a <strong>Blog</strong>.
-                        We write announcements, updates and other stuff.
+		    <p class="lead">We make
+		    <a href="http://www.piladb.org" target="_blank" class="clean"><strong>piladb</strong></a>,
+		     a lightweight database engine based on stack data structures.
+		    <br><br>
+		    Create stacks, push and pop <strong><span class="typed"></span></strong>, always in constant time.
+		    <br><br>
+		    <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
+		    <br><br>
+		    Also, it is not like other databases that you have used before.
+		    <br><br>
+		    <script src="https://gist.github.com/fern4lvarez/73f4fde6624b387335083eb29ad83b78.js"></script>
+		    <br><br>
 		    </p>
-                    <a href="http://blog.oscillating.works" target="_blank" class="btn btn-lg btn-dark">
-                    <i class="fa fa-pencil fa-fw"></i>Blog
-                    </a>
+
+			<a href="https://github.com/fern4lvarez/piladb" class="btn btn-success btn-lg"><span class="fa fa-github"></span> Code</a>
+			<a href="http://docs.piladb.org" class="btn btn-success btn-lg"><span class="fa fa-book"></span> Docs</a>
+			<a href="https://reddit.com/r/piladb" class="btn btn-success btn-lg"><span class="fa fa-bullhorn"></span> Ask</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Team -->
-    <section id="team" class="team bg-success">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="oswfont">oscillatingpeople</h2>
-                    <hr class="small dark">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                    <img src="img/fa.jpg" class="img-responsive img-circle" alt="">
-                                </span>
-                                <h4>
-                                    <strong>Fernando Álvarez</strong><a href="https://github.com/fern4lvarez" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/fern4lvarez" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <img src="img/mk.jpg" class="img-responsive img-circle" alt="">
-                            </span>
-                                <h4>
-                                    <strong>Mateusz Korszun</strong><a href="https://github.com/mkorszun" target="_blank"><i class="fa fa-github fa-fw"></i></a><a href="https://twitter.com/mkorszun" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-            </div>
         </div>
         <!-- /.container -->
     </section>
@@ -277,8 +124,12 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4 class="oswfont"><strong>≅oscillatingworks</strong>
                     </h4>
-                    <p>We are an independent,<br>non-commercial organization<br>based in
-                    <strong>Berlin</strong> and <strong>Madrid</strong></p>
+                    <p>We are a non-commercial organization
+		    <br>
+		    working on indie open source software,
+		    <br>
+		    based in
+                    <strong>Madrid</strong></p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
@@ -307,6 +158,17 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Typed Cursor -->
+    <script src="js/typed.js"></script>
+    <script>
+        $(function(){
+	    $(".typed").typed({
+	        strings: ["strings", "numbers", "😍emoji😍", "booleans", "arrays", "JSON objects", "elements"],
+		typeSpeed: 100
+	    });
+	});
+    </script>
 
     <!-- Custom Theme JavaScript -->
     <script>
