Improve typed cursor

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 		    <br><br>
 		    </p>
 
-			<a href="https://github.com/fern4lvarez/piladb" class="btn btn-success btn-lg"><span class="fa fa-github"></span> Code</a>
-			<a href="http://docs.piladb.org" class="btn btn-success btn-lg"><span class="fa fa-book"></span> Docs</a>
-			<a href="https://reddit.com/r/piladb" class="btn btn-success btn-lg"><span class="fa fa-bullhorn"></span> Ask</a>
+	            <a href="https://github.com/fern4lvarez/piladb" class="btn btn-success btn-lg"><span class="fa fa-github"></span> Code</a>
+		    <a href="http://docs.piladb.org" class="btn btn-success btn-lg"><span class="fa fa-book"></span> Docs</a>
+		    <a href="https://reddit.com/r/piladb" class="btn btn-success btn-lg"><span class="fa fa-bullhorn"></span> Ask</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -164,7 +164,8 @@
     <script>
         $(function(){
 	    $(".typed").typed({
-	        strings: ["strings", "numbers", "😍emoji😍", "booleans", "arrays", "JSON objects", "elements"],
+	        strings: ["strings", "numbers", "😍emoji😍", "booleans", "arrays", "JSON objects", "东西随机","עִברִית","العربية"],
+		loop: true,
 		typeSpeed: 100
 	    });
 	});
