Add missing dot on footer

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		    working on indie open source software,
 		    <br>
 		    based in
-                    <strong>Madrid</strong></p>
+                    <strong>Madrid</strong>.</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
