--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="independent, non-commercial organization working on
-    independent and interesting open source software projects. developing piladb." >
+    <meta name="description" content="non-commercial organization working on
+    indie open source software. making piladb." >
     <meta name="keywords" content="open source, organization, github, development, software,
     oscillating works, oscillating, oscillation, piladb">
     <meta name="author" content="Fernando Alvarez, Mateusz Korszun, Elizabeth Osterloh">
