--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		    <a href="http://www.piladb.org" target="_blank" class="clean"><strong>piladb</strong></a>,
 		     a lightweight database engine based on stack data structures.
 		    <br><br>
-		    Create stacks, push and pop <strong><span class="typed"></span></strong>, always in constant time.
+		    Create stacks, push and pop <strong><span class="typed"></span></strong>, always in constant time O(1).
 		    <br><br>
 		    <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
 		    <br><br>
