--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
-            <h3>like lo-fi indie music — but for open source software</h3>
+            <h3>lo-fi open source</h3>
             <br>
         </div>
     </header>
