Update some wording

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
-            <h3>lo-fi open source</h3>
-            <br>
+		<h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
+		<h4 class="lead">We make
+		<a href="#labs" target="_blank" class="clean"><strong>piladb</strong></a>,
+		a lightweight database engine based on stack data structures.
+	</h4>
         </div>
     </header>
 
@@ -92,18 +94,15 @@
                     <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
 		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
-		    <p class="lead">We make
-		    <a href="http://www.piladb.org" target="_blank" class="clean"><strong>piladb</strong></a>,
-		     a lightweight database engine based on stack data structures.
-		    <br><br>
-		    Create stacks, push and pop <strong><span class="typed"></span></strong>, always in constant time O(1).
-		    <br><br>
-		    <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
-		    <br><br>
-		    Also, it is not like other databases that you have used before.
-		    <br><br>
-		    <script src="https://gist.github.com/fern4lvarez/73f4fde6624b387335083eb29ad83b78.js"></script>
-		    <br><br>
+		    <p class="lead">
+		        Create stacks, push and pop <strong><span class="typed"></span></strong>, have access to the top elements always in constant time                         O(1).
+		        <br><br>
+		        <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
+		        <br><br>
+		        Also, it is not like other databases that you have used before.
+		        <br><br>
+		        <script src="https://gist.github.com/fern4lvarez/73f4fde6624b387335083eb29ad83b78.js"></script>
+		        <br><br>
 		    </p>
 
 	            <a href="https://github.com/fern4lvarez/piladb" class="btn btn-success btn-lg"><span class="fa fa-github"></span> Code</a>
@@ -126,7 +125,7 @@
                     </h4>
                     <p>We are a non-commercial organization
 		    <br>
-		    working on indie open source software,
+		    making lo-fi open source software,
 		    <br>
 		    based in
                     <strong>Madrid</strong>.</p>
