--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		        <br><br>
 		        <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
 		        <br><br>
-		        Also, it is not like other databases that you have used before.
+		        Also, it is an open source project made with 💚.
 		        <br><br>
 		        <script src="https://gist.github.com/fern4lvarez/73f4fde6624b387335083eb29ad83b78.js"></script>
 		        <br><br>
