Embed gist with js library

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		        <br><br>
 		        Also, it is an open source project made with 💚.
 		        <br><br>
-		        <script src="https://gist.github.com/fern4lvarez/73f4fde6624b387335083eb29ad83b78.js"></script>
+			<code data-gist-id="73f4fde6624b387335083eb29ad83b78" data-gist-hide-footer="true" data-gist-show-loading="false"></code>
 		        <br><br>
 		    </p>
 
@@ -169,6 +169,9 @@
 	    });
 	});
     </script>
+
+    <!-- gist-embed -->
+    <script type="text/javascript" src="js/gist-embed.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
