Update link to piladb link on index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="oswfont">oscillatinglabs</h2>
                     <hr class="small">
-		    <a href="http://piladb.oscillating.works" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
+		    <a href="http://www.piladb.org" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
 		    <p class="lead">
 		        Create stacks, push and pop <strong><span class="typed"></span></strong>, have access to the top elements always in constant time                         O(1).
 		        <br><br>
