Simplify all, add new project

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="non-commercial organization working on
     indie open source software. making piladb." >
     <meta name="keywords" content="open source, organization, github, development, software,
-    oscillating works, oscillating, oscillation, piladb">
-    <meta name="author" content="Fernando Alvarez, Mateusz Korszun, Elizabeth Osterloh">
+    oscillating works, oscillating, oscillation, piladb, bou">
+    <meta name="author" content="Fernando Alvarez">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -64,13 +64,10 @@
                 <a href="#top" class="oswfont">≅oscillatingworks</a>
             </li>
             <li>
-                <a href="#top">Home</a>
+                <a class="lead" href="https://boudesk.top" target="_blank">bou</a>
             </li>
             <li>
-                <a href="#labs">piladb</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
+                <a class="lead" href="https://piladb.org" target="_blank">piladb</a>
             </li>
         </ul>
     </nav>
@@ -79,42 +76,9 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
 		<h1 class="oswfont"><small>≅</small>oscillatingworks</h1>
-		<h4 class="lead">We make
-		<a href="#labs" target="_blank" class="clean"><strong>piladb</strong></a>,
-		a lightweight database engine based on stack data structures.
-	</h4>
+		<h4 class="lead">lo-fi open source software</h4>
         </div>
     </header>
-
-    <!-- Labs -->
-    <section id="labs" class="labs">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2 class="oswfont">oscillatinglabs</h2>
-                    <hr class="small">
-		    <a href="http://www.piladb.org" target="_blank" class="clean"><img class="img-responsive center-block" src="img/piladb.png" alt=""></a>
-		    <p class="lead">
-		        Create stacks, push and pop <strong><span class="typed"></span></strong>, have access to the top elements always in constant time                         O(1).
-		        <br><br>
-		        <strong>piladb</strong> is fast, easy to deploy and maintain, lives in memory only, and understands REST.
-		        <br><br>
-		        Also, it is an open source project made with 💚.
-		        <br><br>
-			<code data-gist-id="73f4fde6624b387335083eb29ad83b78" data-gist-hide-footer="true" data-gist-show-loading="false"></code>
-		        <br><br>
-		    </p>
-
-	            <a href="https://github.com/fern4lvarez/piladb" class="btn btn-success btn-lg"><span class="fa fa-github"></span> Code</a>
-		    <a href="http://docs.piladb.org" class="btn btn-success btn-lg"><span class="fa fa-book"></span> Docs</a>
-		    <a href="https://reddit.com/r/piladb" class="btn btn-success btn-lg"><span class="fa fa-bullhorn"></span> Ask</a>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
     <!-- Footer -->
     <footer id="contact">
@@ -123,12 +87,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4 class="oswfont"><strong>≅oscillatingworks</strong>
                     </h4>
-                    <p>We are a non-commercial organization
-		    <br>
-		    making lo-fi open source software,
-		    <br>
-		    based in
-                    <strong>Madrid</strong>.</p>
+                    <p>lo-fi open source software</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@oscillating.works">info@oscillating.works</a>
                         </li>
@@ -146,7 +105,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; ≅oscillatingworks 2018</p>
+                    <p class="text-muted">Copyright &copy; ≅oscillatingworks 2021</p>
                 </div>
             </div>
         </div>
